--- a/kubernetes/ad/svc.yaml
+++ b/kubernetes/ad/svc.yaml
@@ -1,4 +1,3 @@
----
 # Source: opentelemetry-demo/templates/component.yaml
 apiVersion: v1
 kind: Service
@@ -9,7 +8,7 @@ metadata:
     app.kubernetes.io/instance: opentelemetry-demo
     app.kubernetes.io/component: adservice
     app.kubernetes.io/name: opentelemetry-demo-adservice
-    app.kubernetes.io/version: "1.12.0"
+    app.kubernetes.io/version: 1.12.0
     app.kubernetes.io/part-of: opentelemetry-demo
 spec:
   type: ClusterIP
@@ -19,3 +18,23 @@ spec:
       targetPort: 8080
   selector:
     opentelemetry.io/name: opentelemetry-demo-adservice
+Transform: AWS::Serverless-2016-10-31
+
+
+
+# This section defines how the Kubernetes Service exposes network traffic:
+
+# port: 8080
+# The port on which the Service is exposed inside the cluster. 
+# Other pods and services will use this port to communicate with the Service.
+
+# name: tcp-service
+# A name for the port, useful for reference and clarity, especially if there are multiple ports.
+
+# targetPort: 8080
+# The port on the selected pods where traffic will be forwarded. This means requests to the Service on port 8080 
+# are sent to port 8080 on the matching pods.
+
+# In summary:
+# Traffic sent to the Service on port 8080 is forwarded to port 8080 on the backend pods. 
+# The name helps identify the port, especially in multi-port services.
